# ily

./: .gitignore  LICENSE  Lexer.old.x  Makefile  README.markdown  README.md  README.mkd  hs-inqbox.cabal  ily.cabal  stack.yaml
app/: Main.hs
data/sql/: schema.sql
src/: Ily.hs  Main.hs
src/Ily/: Commands.hs  Compiler.hs  Configuration.hs  Core.hs  DB.hs  Doc.hs  Flags.hs  Issues.hs  Lexer.hs  Lexer.x  Nel.hs  Options.hs  Parser.hs  Parser.y  Structure.hs  Syntax.hs
src/Ily/Commands/: Init.hs
src/Ily/Compiler/: Syntax.hs
src/Ily/Derive/: If.hs
src/Ily/Lexer/: Definition.x
src/Ily/Parser/: Base.hs  Const.hs  Definition.y  Derive.hs  Expr.hs  Id.hs  Lexer.hs  Pat.hs  Program.hs  Row.hs  Seq.hs  Type.hs
src/Ily/Syntax/: BinOp.hs  Const.hs  Dec.hs  Expr.hs  Id.hs  Module.hs  Pat.hs  Program.hs  Type.hs
src/main/hs/: Ilya.hs  Main.hs
src/main/hs/Ilya/: Command.hs  Compiler.hs
src/main/hs/Ilya/Command/: Args.hs  Command.hs  Opt.hs
src/main/hs/Ilya/Compiler/: Syntax.hs
src/test/hs/: Main.hs
test/: TestSuite.hs
test/Ily/: CommandsSpec.hs  ConfigurationSpec.hs  DBSpec.hs  LexerSpec.hs  ParserSpec.hs
test/Ily/Parser/: ConstSpec.hs
test/data/: simple.sml  structure.sml
