name:                ily
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ily#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     --src/Ily/Lexer.x
                     --src/Ily/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ily.Syntax
                       --, Ily.Lexer
                       , Ily.Parser
  other-modules:     Ily.Syntax.Const
                     Ily.Syntax.Id
                     Ily.Syntax.Pat
                     Ily.Syntax.Type
                     Ily.Syntax.Expr
                     Ily.Syntax.Module
                     Ily.Parser.Lexer
                     Ily.Parser.Const
                     Ily.Parser.Id
                     Ily.Parser.Type
                     Ily.Parser.Pat
                     Ily.Parser.Row
                     Ily.Parser.Seq
  build-depends:       base >= 4.7 && < 5
                     , array
                     , text
                     , megaparsec
                     , filepath
                     , directory
                     , bytestring
  -- build-tools: happy, alex
  default-language:    Haskell2010

executable ily
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ily
  build-tools: happy, alex
  default-language:    Haskell2010

test-suite ily-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ily
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ily
